src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Office_Country__c</fullName>
        <label>Country (O)</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_No__c</fullName>
        <label>Office No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Office_State_Province__c</fullName>
        <label>State/Province (O)</label>
        <picklist>
            <controllingField>Office_Country__c</controllingField>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu &amp; kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamilnadu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Street__c</fullName>
        <label>Address 1 and 2 (O)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code (O)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_phone_number__c</fullName>
        <label>Phone Number (O)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Old_Customer_Code__c</fullName>
        <label>Old Customer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cuisine__c</fullName>
        <label>Other Cuisine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Destination__c</fullName>
        <label>Other Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Hobbies__c</fullName>
        <label>Other Hobbies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Movies__c</fullName>
        <label>Other Movies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Music__c</fullName>
        <label>Other Music</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reader__c</fullName>
        <label>Other Reader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Sport__c</fullName>
        <label>Other Sport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_Card_No__c</fullName>
        <label>Pan Card No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pan No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pan__c</fullName>
        <label>Pan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parents_Anniversary__c</fullName>
        <label>Parents Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Correspondence__c</fullName>
        <label>Phone Correspondence</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Local__c</fullName>
        <label>Phone Local</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Permanent__c</fullName>
        <label>Phone Permanent</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <label>Pin Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Possession_TypeN__c</fullName>
        <label>Possession Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ready To Move In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 6 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 to 5 Years</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Local__c</fullName>
        <label>Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Permanent__c</fullName>
        <label>Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Coccupation_If_Other__c</fullName>
        <label>Primary Coccupation If Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Coccupation__c</fullName>
        <label>Primary Coccupation</label>
        <picklist>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Number__c</fullName>
        <label>Primary Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Process_to_ERP__c</fullName>
        <label>Process to ERP</label>
        <picklist>
            <picklistValues>
                <fullName>UnProcessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reader__c</fullName>
        <label>Reader</label>
        <picklist>
            <picklistValues>
                <fullName>Fiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thriller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reg_No__c</fullName>
        <label>Reg.No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resident_Address__c</fullName>
        <label>Resident Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resident Individuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Companies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resident_Status__c</fullName>
        <label>Resident Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resident Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Companies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_State_Province__c</fullName>
        <label>State/Province (R)</label>
        <picklist>
            <controllingField>Country_R__c</controllingField>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu &amp; kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamilnadu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Street__c</fullName>
        <label>Address 1 and 2 (R)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residential_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code (R)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Area_Of_Requirement_single__c</fullName>
        <label>Area Of Requirement Single</label>
        <picklist>
            <picklistValues>
                <fullName>Aarey Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agripada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alibag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altamount Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambernath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambivali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amboli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri-Kurla Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anu Shakti Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asangaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August Kranti Marg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayodhya Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azad Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babulnath Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra Kurla Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangur Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bari Wada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behram Baug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellasis Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverly park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhadane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhandup East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Area_in_Sqft__c</fullName>
        <label>Area In Sqft</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 to 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 to 1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1200 to 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 1500</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>S_Budget_Max__c</fullName>
        <label>Budget (Max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Budget_Min__c</fullName>
        <label>Budget (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Communication_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Communication Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Cross_Project_Exposure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cross Project Exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_D_W_Name__c</fullName>
        <label>S/D/W Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Designation_Category__c</fullName>
        <label>Designation Category</label>
        <picklist>
            <controllingField>Designation_Permanent__c</controllingField>
            <picklistValues>
                <fullName>Mid Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Original_Source_of_Lead__c</fullName>
        <label>Original Source of Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Other_Projects__c</fullName>
        <label>Other Project Interested</label>
        <picklist>
            <picklistValues>
                <fullName>Project1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Bandra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius UAT Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Reality Force</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_PReason_for_Purchase__c</fullName>
        <label>Reason For Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>End use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Possession_Type__c</fullName>
        <label>Possession Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ready To Move In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 6 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 to 5 Years</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>S_Possession_type_last_edited__c</fullName>
        <label>Possession type last edited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>S_Pr_History__c</fullName>
        <label>Product History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S_Type_of_accomadation__c</fullName>
        <label>Type Of Accomodation</label>
        <picklist>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>S_Zone_R__c</fullName>
        <label>Zone (R)</label>
        <picklist>
            <controllingField>Suburb_R__c</controllingField>
            <picklistValues>
                <fullName>NAVI MUMBAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASTERN SUBURBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL SUBURBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH MUMBAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THANE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTERN SUBURBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAR WESTERN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAR EASTERN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTERN MUM - BKC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTERN MUMBAI - MAIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Site Visit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spouse_s_Name__c</fullName>
        <label>Spouse&apos;s Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Local__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadar &amp; Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman &amp; Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondichery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>